Add text wrapping at 10000 characters and general cleanup (#2)
* Add text wrapping at 10000 characters, general cleanup.

* Update to Rust 2024, add repository key to cargo.toml.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "tdsr-server"
 version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2024"
+repository = "https://github.com/tspivey/tdsr-server"
 
 [dependencies]
 libc = "0.2.152"
+textwrap = "0.16.2"
 
 [profile.release]
 strip = true
