--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 repository = "https://github.com/tspivey/tdsr-server"
 
 [dependencies]
+native-dialog = "0.7.0"
 tao = "0.32.8"
 textwrap = "0.16.2"
 tray-icon = "0.20.0"
