Use anyhow for error handling.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 repository = "https://github.com/tspivey/tdsr-server"
 
 [dependencies]
+anyhow = "1.0.98"
 native-dialog = "0.9.0"
 tao = "0.34.0"
 textwrap = "0.16.2"
